# fastapi

./: README.md  pyproject.toml
auth/: hash.py  oauth.py
db/: alembic.ini
db/develop/: env.py
db/develop/versions/: 13624f0cf9e0_update_user_table.py  cece0de7b5b1_add_user_table.py  df524e3de232_first_migration.py
demo/: database.py  main.py
demo/cruds/: done.py  todo.py  user.py
demo/models/: todo.py  user.py
demo/routers/: authentication.py  done.py  todos.py  user.py
demo/schemas/: common.py  todo.py  user.py
log/: conf.yaml  log.py
tests/: conftest.py
tests/routers/: test_todos.py
