[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.taskipy.tasks]
start = "uvicorn demo.main:app --reload"
fmt = "task fmt-black && task fmt-isort"
fmt-isort = "isort demo db tests"
fmt-black = "black db tests demo"
lint = "task lint-black && task lint-flake8 && task lint-mypy"
lint-flake8 = "flake8 demo db tests"
lint-mypy = "mypy demo db tests"
lint-black = "black --check demo db tests"
test = "pytest tests"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"
SQLAlchemy = "^2.0.12"
alembic = "^1.10.4"
psycopg2-binary = "^2.9.6"
psycopg2 = "^2.9.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.1"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
taskipy = "^1.10.4"
flake8-isort = "^6.0.0"
flake8-bugbear = "^23.5.9"
flake8-builtins = "^2.1.0"
flake8-unused-arguments = "^0.0.13"
flake8-pytest-style = "^1.7.2"
pep8-naming = "^0.13.3"
mypy = "^1.3.0"
python-multipart = "^0.0.6"
email-validator = "^2.0.0"
pytest = "^7.3.1"
SQLAlchemy-Utils = "^0.41.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true